syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package Dto;

message AccountCtrlDto {
  int32 id = 1;
  string name = 2;
  string pin = 3;
  string pic = 4;
  google.protobuf.Timestamp birthday = 5;
  int32 banned = 6;
  google.protobuf.StringValue banreason = 7;
  google.protobuf.StringValue macs = 8;
  int32 characterslots = 9;
  int32 gender = 10;
  optional google.protobuf.Timestamp tempban = 11;
  int32 greason = 12;
  bool tos = 13;
  int32 gMLevel = 14;
  google.protobuf.StringValue ip = 15;
  string hwid = 16;
  int32 language = 17;
  bool canFly = 18;
}
