syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
package Dto;

message GiftDto {
  int32 id = 1;
  int32 to = 2;
  string from = 3;
  string message = 4;
  int32 sn = 5;
  int32 ringId = 6;
}
