syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
package Dto;

message PetIgnoreDto {
  int32 petId = 1;
  repeated int32 excludedItems = 2;
}
