syntax = "proto3";

package RankProto;

message RankCharacter {
  int32 rank = 1;
  int32 level = 2;
  string name = 3;
}

message LoadCharacterRankRequest {
	int32 count = 1;
}

message LoadCharacterRankResponse {
  repeated RankCharacter list = 1;
}